Date filter for list slots
