# src/controllers/slots.ts
@@ -1,14 +1,45 @@
 import { Request, Response, NextFunction } from 'express'
+import dayjs from 'dayjs'
 
 import Availability from '@models/Availability'
 
 const controllers = {
-  async get (_request: Request, response: Response, next: NextFunction) {
+  async get (request: Request, response: Response, next: NextFunction) {
     try {
+      const {
+        minimumStartDate,
+        minimumStartTime,
+        maximumStartDate,
+        maximumStartTime
+      } = request.query
+
+      const minimumStartsAt = dayjs(`${minimumStartDate} ${minimumStartTime}`).toDate()
+      const maximumStartsAt = dayjs(`${maximumStartDate} ${maximumStartTime}`).toDate()
+
       const slots = await Availability.aggregate([
         {
           $unwind: {
             path: '$slots'
+          }
+        },
+        {
+          $addFields: {
+            startsAt: {
+              $dateFromString: {
+                dateString: {
+                  $concat: ['$slots.startDate', ' ', '$slots.startTime'],
+                },
+                timezone: 'America/Sao_Paulo'
+              }
+            }
+          }
+        },
+        {
+          $match: {
+            startsAt: {
+              $gte: minimumStartsAt,
+              $lte: maximumStartsAt
+            }
           }
         },
         {
