# src/docs/api.yaml
@@ -30,9 +30,48 @@ components:
         startTime: '15:50'
         endDate: '2021-07-05'
         endTime: '12:00'
+    Slot:
+      type: object
+      properties:
+        professional:
+          type: string
+        startDate:
+          type: string
+        startTime:
+          type: string
+      example:
+        professional: Scrooge Mcduck
+        startDate: '2021-07-04'
+        startTime: '15:50'
+    Session:
+      type: object
+      properties:
+        customer:
+          type: string
+        professional:
+          type: string
+        startDate:
+          type: string
+        startTime:
+          type: string
+      example:
+        customer: 'Lewis Hamilton'
+        professional: Scrooge Mcduck
+        startDate: '2021-07-04'
+        startTime: '15:50'
+    AvailabilityNotFound:
+      type: object
+      example:
+        error: Availability not found
+    InternalServerError:
+      type: object
+      example:
+        error: Internal server error
 paths:
   /api/availabilities:
     get:
+      tags:
+        - Availabilities
       summary: Returns a list of all availabilities.
       description: Optional extended description in CommonMark or HTML.
       responses:
@@ -44,3 +83,159 @@ paths:
                 type: array
                 items: 
                   $ref: '#/components/schemas/Availability'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+    post:
+      tags:
+        - Availabilities
+      summary: Creates a new availability.
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '201':
+          description: A JSON object of the new availability
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Availability'
+        '409':
+          description: Conflict between availabilities
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  error: Availability in conflict with another
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+  /api/availabilities/{id}:
+    get:
+      tags:
+        - Availabilities
+      summary: Returns one availability if exists.
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '200':
+          description: A JSON object of the availability
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Availability'
+        '404':
+          description: The availability was not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AvailabilityNotFound'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+    put:
+      tags:
+        - Availabilities
+      summary: Updates one availability if exists and if has no scheduled session.
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '200':
+          description: A JSON object of the updated availability
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Availability'
+        '404':
+          description: The availability was not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AvailabilityNotFound'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+    delete:
+      tags:
+        - Availabilities
+      summary: Deletes one availability if exists and if has no scheduled session.
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '204':
+          description: The availability was deleted successfully.
+        '404':
+          description: The availability was not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AvailabilityNotFound'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+  /api/slots:
+    get:
+      tags:
+        - Slots
+      parameters:
+        - in: query
+          name: minimumStartDate
+          schema:
+            type: string
+            maximum: 1
+          example: '2021-07-04' 
+        - in: query
+          name: minimumStartTime
+          schema:
+            type: string
+            maximum: 1
+          example: '15:00'
+        - in: query
+          name: maximumStartDate
+          schema:
+            type: string
+            maximum: 1
+          example: '2021-07-04' 
+        - in: query
+          name: maximumStartTime
+          schema:
+            type: string
+            maximum: 1
+          example: '18:00'
+      responses:
+        '200':
+          description: A JSON array of available slots
+          content:
+            application/json:
+              schema:
+                type: array
+                items: 
+                  $ref: '#/components/schemas/Slot'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+  /api/sessions:
+    post:
+      tags:
+        - Sessions
+      responses:
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
