# src/routers/slots.ts
@@ -1,9 +1,10 @@
 import { Router } from 'express'
 
 import controllers from '@controllers/slots'
+import validators from '@middlewares/validators/slots'
 
 const router = Router()
 
-router.get('/', controllers.get)
+router.get('/', validators.get, controllers.get)
 
 export default router
